# waflz

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.txt  NOTICE.txt  README.md  TODO  Vagrantfile  build.sh  build_simple.sh  build_waf.sh  doxygen.conf  errors  generate_json_rules.py  requirements.txt
.github/workflows/: build.yml
archive/util/scopez_server/: scopez_server.cc
docs/: Makefile  acl.html  appendix.html  building.html  capabilities.html  dedication.html  development.html  directives.html  genindex.html  index.html  issues.html  make.bat  objects.inv  overview.html  profiles.html  regen_html.sh  search.html  searchindex.js  waflz_dump.html  waflz_server.html
docs/_static/: documentation_options.js
docs/source/: acl.rst  appendix.rst  building.rst  capabilities.rst  conf.py  dedication.rst  development.rst  directives.rst  index.rst  issues.rst  overview.rst  profiles.rst  waflz_dump.rst  waflz_server.rst
ext/ectoken/: base64.cc  base64.h  ectoken_v3.cc  ectoken_v3.h
ext/libinjection/src/: libinjection.h  libinjection_sqli.c
ext/libmaxminddb/src/: maxminddb.d
ext/yajl/: yajl_parser.c  yajl_tree.c
include/waflz/: _waf.h  acl.h  arg.h  atomic.h  bot_manager.h  bots.h  challenge.h  config.h  config_parser.h  configs.h  def.h  enforcer.h  engine.h  geoip2_mmdb.h  instance.h  instances.h  kv_db.h  kycb_db.h  limit.h  lm_db.h  parser.h  profile.h  redis_db.h  render.h  render_resp.h  resp_ctx.h  rl_obj.h  rqst_ctx.h  rules.h  scopes.h  scopes_configs.h  string_util.h  trace.h  waf.h  waflz.h
include/waflz/db/: kv_db.h  kycb_db.h  redis_db.h
include/waflz/limit/: challenge.h  config.h  configs.h  enforcer.h  limit.h  rl_obj.h
plugins/nginx/: README.md  config
plugins/nginx/src/: ngx_http_waflz_module.c  ngx_http_waflz_module.h
proto/: .gitignore  CMakeLists.txt  acl.proto  action.proto  bot_manager.proto  config.proto  enforcement.proto  event.proto  limit.proto  profile.proto  request_info.proto  rule.proto  scope.proto
sample/profile/: sample.waf.prof.json
src/: CMakeLists.txt
src/core/: _waf.cc  acl.cc  bot_manager.cc  bots.cc  challenge.cc  decode.cc  decode.h  engine.cc  instance.cc  instances.cc  macro.cc  macro.h  op.cc  op.h  profile.cc  render.cc  render_resp.cc  resp_ctx.cc  rqst_ctx.cc  rules.cc  schema.cc  scopes.cc  scopes_configs.cc  tx.cc  tx.h  var.cc  var.h  waf.cc
src/db/: kycb_db.cc  lm_db.cc  redis_db.cc
src/jspb/: jspb.cc  jspb.h
src/limit/: challenge.cc  config.cc  configs.cc  enforcer.cc  limit.cc  rl_obj.cc  rl_op.cc  rl_op.h
src/modsecurity/: config_parser.cc
src/op/: ac.cc  ac.h  ac_utf8.h  byte_range.cc  byte_range.h  luhn.cc  luhn.h  nms.cc  nms.h  regex.cc  regex.h
src/parser/: parser.cc  parser_json.cc  parser_json.h  parser_url_encoded.cc  parser_url_encoded.h  parser_xml.cc  parser_xml.h
src/support/: base64.cc  base64.h  city.cc  curl_util.cc  curl_util.h  file_util.cc  file_util.h  free_pool.h  geoip2_mmdb.cc  geoip2_mmdb.h  kv_map_list.h  md5.h  md5_hasher.h  ndebug.cc  ndebug.h  string_util.cc  string_util.h  time_util.cc  time_util.h  trace.cc  trace_internal.cc  trace_internal.h  waflz_trace.cc  waflz_trace.h
support/: deb2tar.sh
tests/: CMakeLists.txt
tests/blackbox/: .gitignore  CMakeLists.txt  README.md  TODO  pytest.ini  run_tests.sh  run_waflz_server.sh
tests/blackbox/access_settings/: test_bb_access_settings.py  test_bb_access_settings.waf.prof.json
tests/blackbox/acl/: test_bb_acl.py  test_bb_acl.waf.prof.json  test_bb_acl_accesslists.py  test_bb_acl_accesslists.waf.prof.json  test_bb_acl_settings.acl.json  test_bb_file_ext.acl.json
tests/blackbox/bot_challenge/: test_bb_bot_challenge.py
tests/blackbox/challenge/: test_bb_challenge.py
tests/blackbox/instances/: OWASP_2_2_9.anomaly_low.vectors.json  OWASP_3_2.anomaly.vectors.json  OWASP_3_2.anomaly_low.vectors.json  template.waf.instance.json  test_instances.py
tests/blackbox/limit/: test_bb_limit.py  test_bb_limit_lmdb.py
tests/blackbox/profile/: test_bb_profile.py  test_bb_profile.waf.prof.json
tests/blackbox/rules/: test_bb_json_bodies.py  test_bb_json_bodies.waf.prof.json  test_bb_rtu.py  test_bb_rtu.waf.prof.json  test_bb_rules.py  test_bb_rules.waf.prof.json  test_bb_ua.rules.json  test_bb_xml.py  test_bb_xml.waf.prof.json
tests/blackbox/ruleset/: OWASP_2_2_9.anomaly.vectors.json  OWASP_2_2_9.anomaly_low.vectors.json  OWASP_3_0_2.anomaly.vectors.json  (+7 more)
tests/whitebox/: CMakeLists.txt
tests/whitebox/core/: CMakeLists.txt  wb_acl.cc  wb_acl_accesslist.cc  wb_challenge.cc  wb_decode.cc  wb_defs.cc  wb_instances.cc  wb_matched_data.cc  wb_op.cc  wb_profile_acl.cc  wb_profile_policies.cc  wb_render.cc  wb_resp_var.cc  wb_schema.cc  wb_scopes.cc  wb_scopes_update.cc  wb_shell_shock.cc  wb_tx.cc  wb_var.cc
tests/whitebox/data/waf/: DEADDEAD-1001.waf.json  DEADDEAD-1002.waf.json  DEADDEAD-1003.waf.json
tests/whitebox/db/: CMakeLists.txt  wb_kycb_db.cc  wb_lm_db.cc  wb_redis_db.cc
tests/whitebox/jspb/: CMakeLists.txt  wb_jspb.cc
tests/whitebox/limit/: CMakeLists.txt  wb_challenge.cc  wb_config.cc  wb_config_bc.cc  wb_enforcer.cc  wb_integration.cc  wb_rl_op.cc
tests/whitebox/op/: CMakeLists.txt  wb_ac.cc  wb_byte_range.cc  wb_luhn.cc  wb_nms.cc  wb_regex.cc
tests/whitebox/parser/: CMakeLists.txt  wb_parser_json.cc  wb_parser_xml.cc
tests/whitebox/support/: CMakeLists.txt  wb_file_util.cc  wb_geoip2_mmdb.cc  wb_md5.cc  wb_md5_hasher.cc  wb_string_util.cc  wb_time_util.cc
util/: CMakeLists.txt
util/scopez_server/: CMakeLists.txt  TAGS  scopez_server.cc  sx_scopes.cc  sx_scopes.h
util/waflz_dump/: CMakeLists.txt  waflz_dump.cc
util/waflz_server/: CMakeLists.txt  cb.cc  cb.h  sx.h  sx_acl.cc  sx_acl.h  sx_instance.cc  sx_instance.h  sx_limit.cc  sx_limit.h  sx_limits.cc  sx_limits.h  sx_modsecurity.cc  sx_modsecurity.h  sx_profile.cc  sx_profile.h  sx_rules.cc  sx_rules.h  sx_scopes.cc  sx_scopes.h  waflz_server.cc
util/wjc/: CMakeLists.txt  README  wjc.cc
util/wjc/tests/confs/: 0050-1001-BAD-01.waf.json  0050-1001.waf.json
util/wpc/: CMakeLists.txt  wpc.cc
(+93 files in other folders)
